# Register the tests. We use wrapper scripts as we need to do Py setup and
# keep execution time under the 60s.

TESTS += libs/nscertlib/tests/nscertlib_ci_smoke/wrappers/smoke1.sh
TESTS += libs/nscertlib/tests/nscertlib_ci_smoke/wrappers/smoke2.sh
TESTS += libs/nscertlib/tests/nscertlib_ci_smoke/wrappers/smoke3.sh
TESTS += libs/nscertlib/tests/nscertlib_ci_smoke/wrappers/smoke4.sh
TESTS += libs/nscertlib/tests/nscertlib_ci_smoke/wrappers/smoke5.sh

